# rust-bf

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
docs/: ACTION_PLAN.md  DESIGN.md  action_plan.md  v_0.2.0_action_plan.md
examples/: debug.rs  reader.rs  usage.rs  writer.rs
lib/: Cargo.toml
lib/examples/: debug.rs  reader.rs  writer.rs
lib/src/: reader.rs  writer.rs
src/: cli_util.rs  config.rs  ide.rs  lib.rs  main.rs  read.rs  reader.rs  repl.rs  theme.rs  tui.rs  write.rs  writer.rs
src/commands/: ide.rs  mod.rs  read.rs  repl.rs  tui.rs  write.rs
tests/: debug_flag.rs  empty_submission.rs  errors.rs  history_state.rs  meta_commands.rs  mode.rs  mode_policy.rs  non_blocking.rs  read_cmd.rs  repl.rs  signal.rs  stdin_read.rs  streams.rs  streams_and_flushing.rs  valid_invalid_program.rs  write_debug.rs  write_roundtrip.rs
