[package]
name = "bf"
version = "0.4.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
crossterm = "0.29.0"
ctrlc = "3.4.7"
nu-ansi-term = "0.50.1"
ratatui = "0.29.0"
reedline = "0.41.0"
thiserror = "2.0.16"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
