[package]
name = "rust-bf"
version = "0.4.0"
edition = "2024"
description = "A Brainfuck interpreter, generator, REPL, and IDE written in Rust"
repository = "https://github.com/kennethlove/rust-bf"
license = "Apache-2.0"
keywords = ["brainfuck", "interpreter", "REPL", "IDE"]
categories = ["command-line-utilities", "development-tools", "compilers"]
exclude = ["/docs/*", ".idea/*", ".DS_Store", "*.bf", "Cargo.lock"]

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
cross-xdg = "2.0.0"
crossterm = "0.29.0"
ctrlc = "3.4.7"
nu-ansi-term = "0.50.1"
ratatui = "0.29.0"
reedline = "0.41.0"
thiserror = "2.0.16"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
